--- a/main.ipynb
+++ b/main.ipynb
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "forders_time=os.listdir(\"서울특별시 공공자전거 이용정보(시간대별)_2021년\")\n",
     "forders_month=os.listdir(\"서울특별시 공공자전거 이용정보(월별)_2021년\")\n",
-    "df_time=pd.DataFrame()\n",
+    "df_time=pd.DataFrame()  # 이 부분의 데이터를 불러오지 못했다.\n",
     "df_month=pd.DataFrame()\n",
     "df_location=pd.read_csv(\"공공자전거 대여소 정보(21.12월 기준).csv\",encoding='cp949')\n",
     "df_member=pd.read_csv(\"서울특별시 공공자전거 신규가입자 정보(일별).csv\",encoding='cp949')\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4  14642.60    134.0      NaN      NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대여일자</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>대여소명</th>\n",
+       "      <th>대여구분코드</th>\n",
+       "      <th>성별</th>\n",
+       "      <th>연령대코드</th>\n",
+       "      <th>이용건수</th>\n",
+       "      <th>운동량</th>\n",
+       "      <th>탄소량</th>\n",
+       "      <th>이동거리(M)</th>\n",
+       "      <th>이용시간(분)</th>\n",
+       "      <th>이용거리(M)</th>\n",
+       "      <th>이용시간(본)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>102921</th>\n",
+       "      <td>2021-12</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>상담센터</td>\n",
+       "      <td>정기</td>\n",
+       "      <td>M</td>\n",
+       "      <td>AGE_005</td>\n",
+       "      <td>2</td>\n",
+       "      <td>77.06</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>2780.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102922</th>\n",
+       "      <td>2021-12</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>상담센터</td>\n",
+       "      <td>정기</td>\n",
+       "      <td>M</td>\n",
+       "      <td>AGE_006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.38</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>230.1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102923</th>\n",
+       "      <td>2021-12</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>상담센터</td>\n",
+       "      <td>정기</td>\n",
+       "      <td>M</td>\n",
+       "      <td>AGE_008</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82.11</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>3190.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102924</th>\n",
+       "      <td>2021-12</td>\n",
+       "      <td>88888</td>\n",
+       "      <td>88888.영남배송</td>\n",
+       "      <td>정기</td>\n",
+       "      <td>M</td>\n",
+       "      <td>AGE_006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102925</th>\n",
+       "      <td>2021-12</td>\n",
+       "      <td>99999</td>\n",
+       "      <td>99999. 영남단말기정비</td>\n",
+       "      <td>정기</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>AGE_008</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           대여일자  대여소번호            대여소명 대여구분코드  성별    연령대코드  이용건수    운동량   탄소량  \\\n",
+       "102921  2021-12   9999            상담센터     정기   M  AGE_005     2  77.06  0.64   \n",
+       "102922  2021-12   9999            상담센터     정기   M  AGE_006     1   6.38  0.05   \n",
+       "102923  2021-12   9999            상담센터     정기   M  AGE_008     2  82.11  0.74   \n",
+       "102924  2021-12  88888      88888.영남배송     정기   M  AGE_006     1   0.00  0.00   \n",
+       "102925  2021-12  99999  99999. 영남단말기정비     정기  \\N  AGE_008     4   0.00  0.00   \n",
+       "\n",
+       "        이동거리(M)  이용시간(분)  이용거리(M)  이용시간(본)  \n",
+       "102921   2780.0     31.0      NaN      NaN  \n",
+       "102922    230.1      2.0      NaN      NaN  \n",
+       "102923   3190.0     28.0      NaN      NaN  \n",
+       "102924      0.0     17.0      NaN      NaN  \n",
+       "102925      0.0      5.0      NaN      NaN  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_month.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +716,7 @@
        "19  126.9317627  2015-09-07      10        NaN    LCD  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -648,26 +799,212 @@
        "      <td>NaN</td>\n",
        "      <td>91</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2018-07-20</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>60대</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2018-07-20</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>70대이상</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2018-07-21</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>10대</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2018-07-21</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>20대</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018-07-21</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>30대</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>385</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         가입일자   사용자코드 연령대코드   성별  가입 수\n",
-       "0  2018-07-20  회원-내국인   10대  NaN   221\n",
-       "1  2018-07-20  회원-내국인   20대  NaN  1189\n",
-       "2  2018-07-20  회원-내국인   30대  NaN   348\n",
-       "3  2018-07-20  회원-내국인   40대  NaN   201\n",
-       "4  2018-07-20  회원-내국인   50대  NaN    91"
+       "         가입일자   사용자코드  연령대코드   성별  가입 수\n",
+       "0  2018-07-20  회원-내국인    10대  NaN   221\n",
+       "1  2018-07-20  회원-내국인    20대  NaN  1189\n",
+       "2  2018-07-20  회원-내국인    30대  NaN   348\n",
+       "3  2018-07-20  회원-내국인    40대  NaN   201\n",
+       "4  2018-07-20  회원-내국인    50대  NaN    91\n",
+       "5  2018-07-20  회원-내국인    60대  NaN    16\n",
+       "6  2018-07-20  회원-내국인  70대이상  NaN     3\n",
+       "7  2018-07-21  회원-내국인    10대  NaN   270\n",
+       "8  2018-07-21  회원-내국인    20대  NaN  1329\n",
+       "9  2018-07-21  회원-내국인    30대  NaN   385"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_member.head()"
+    "df_member.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>가입일자</th>\n",
+       "      <th>사용자코드</th>\n",
+       "      <th>연령대코드</th>\n",
+       "      <th>성별</th>\n",
+       "      <th>가입 수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15788</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>40대</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15789</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>40대</td>\n",
+       "      <td>M</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15790</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>50대</td>\n",
+       "      <td>F</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15791</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>50대</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15792</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>50대</td>\n",
+       "      <td>M</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15793</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>60대</td>\n",
+       "      <td>F</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15794</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>60대</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15795</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>60대</td>\n",
+       "      <td>M</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15796</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>70대이상</td>\n",
+       "      <td>F</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15797</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>회원-내국인</td>\n",
+       "      <td>70대이상</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             가입일자   사용자코드  연령대코드 성별  가입 수\n",
+       "15788  2021-12-31  회원-내국인    40대  M     3\n",
+       "15789  2021-12-31  회원-내국인    40대  M    22\n",
+       "15790  2021-12-31  회원-내국인    50대  F    14\n",
+       "15791  2021-12-31  회원-내국인    50대  M     4\n",
+       "15792  2021-12-31  회원-내국인    50대  M    13\n",
+       "15793  2021-12-31  회원-내국인    60대  F     7\n",
+       "15794  2021-12-31  회원-내국인    60대  M     2\n",
+       "15795  2021-12-31  회원-내국인    60대  M    10\n",
+       "15796  2021-12-31  회원-내국인  70대이상  F     3\n",
+       "15797  2021-12-31  회원-내국인  70대이상  M     1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_member.tail(10)"
    ]
   },
   {
@@ -680,16 +1017,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1323515 entries, 0 to 102925\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column   Non-Null Count    Dtype  \n",
+      "---  ------   --------------    -----  \n",
+      " 0   대여일자     1323515 non-null  object \n",
+      " 1   대여소번호    1323515 non-null  int64  \n",
+      " 2   대여소명     1323515 non-null  object \n",
+      " 3   대여구분코드   1323515 non-null  object \n",
+      " 4   성별       1151062 non-null  object \n",
+      " 5   연령대코드    1323515 non-null  object \n",
+      " 6   이용건수     1323515 non-null  int64  \n",
+      " 7   운동량      1323515 non-null  object \n",
+      " 8   탄소량      1323515 non-null  object \n",
+      " 9   이동거리(M)  1195102 non-null  float64\n",
+      " 10  이용시간(분)  1195102 non-null  float64\n",
+      " 11  이용거리(M)  128413 non-null   float64\n",
+      " 12  이용시간(본)  128413 non-null   float64\n",
+      "dtypes: float64(4), int64(2), object(7)\n",
+      "memory usage: 141.4+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n결과를 보면 알 수 있지만, 대여일자, 대여소번호는 non-null값의 개수가 일치하는 반면,\\n성별과 이동거리, 이용시간, 이용거리, 이용시간 부분은 대여일자, 대여소 번호에 비하면 그 수가 적음을 확인할 수 있다.\\n이는 none값이 존재함을 의미. 이 때  None값을 대체해야할지, 그대로 둘 지, 제거할 지를 정해야한다.\\n해당 데이터만을 보고 성별을 예측할 수 없기 때문에 성별은 none값을 제거하고\\n이동거리와 이용거리는 같은 탭인것 같기 때문에 이는 데이터 가공시에 조건문으로 처리한다.(그대로 둔다는 의미)\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 결측치 처리(1)"
+    "# df_month 결측치 확인(각 열별로 결측치가 몇개씩 존재하는지 확인)\n",
+    "df_month.info()\n",
+    "\n",
+    "'''\n",
+    "결과를 보면 알 수 있지만, 대여일자, 대여소번호는 non-null값의 개수가 일치하는 반면,\n",
+    "성별과 이동거리, 이용시간, 이용거리, 이용시간 부분은 대여일자, 대여소 번호에 비하면 그 수가 적음을 확인할 수 있다.\n",
+    "이는 none값이 존재함을 의미. 이 때  None값을 대체해야할지, 그대로 둘 지, 제거할 지를 정해야한다.\n",
+    "해당 데이터만을 보고 성별을 예측할 수 없기 때문에 성별은 none값을 제거하고\n",
+    "이동거리와 이용거리는 같은 탭인것 같기 때문에 이는 데이터 가공시에 조건문으로 처리한다.(그대로 둔다는 의미)\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
