초기버전 업로드
주제 세분화 몇가지하고 확인용도로 올립니다

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] 지정된 경로를 찾을 수 없습니다: '서울특별시 공공자전거 이용정보(시간대별)_2021년'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m forders_time\u001b[38;5;241m=\u001b[39m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m서울특별시 공공자전거 이용정보(시간대별)_2021년\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m forders_month\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mlistdir(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m서울특별시 공공자전거 이용정보(월별)_2021년\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m df_time\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mDataFrame()  \u001b[38;5;66;03m# 이 부분의 데이터를 불러오지 못했다.\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] 지정된 경로를 찾을 수 없습니다: '서울특별시 공공자전거 이용정보(시간대별)_2021년'"
+     ]
+    }
+   ],
    "source": [
     "forders_time=os.listdir(\"서울특별시 공공자전거 이용정보(시간대별)_2021년\")\n",
     "forders_month=os.listdir(\"서울특별시 공공자전거 이용정보(월별)_2021년\")\n",
@@ -1158,32 +1170,506 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 서울시 구별 설치 거치대의 개수"
+    "### 서울시 구별 대여소 및 거치대의 개수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 서울시 구별 설치 거치대의 개수 (1)"
+    "#데이터불러오기 \n",
+    "#cp949 인코딩 사용 한글 데이터 커버\n",
+    "#각종 패키지 불러오기\n",
+    "import matplotlib.font_manager as fm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "font_path = './NanumGothic.ttf' # 나눔고딕폰트 사용\n",
+    "font_name = fm.FontProperties(fname=font_path).get_name()\n",
+    "plt.rc('font', family=font_name)\n",
+    "plt.rcParams['axes.unicode_minus'] = False #minus 폰트깨짐 방지\n",
+    "\n",
+    "plt.style.use('seaborn')\n",
+    "sns.set(font=\"NanumGothic\", \n",
+    "rc={\"axes.unicode_minus\":False}) #seaborn 한글폰트사용\n",
+    "\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "Data1 = pd.read_csv('data-set/공공자전거 대여소 정보(21.01.31 기준).csv', encoding = 'cp949')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대여소\\n번호</th>\n",
+       "      <th>보관소(대여소)명</th>\n",
+       "      <th>소재지(위치)</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>설치\\n시기</th>\n",
+       "      <th>설치형태</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>운영\\n방식</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCD</td>\n",
+       "      <td>QR</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>자치구</td>\n",
+       "      <td>상세주소</td>\n",
+       "      <td>위도</td>\n",
+       "      <td>경도</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>거치\\n대수</td>\n",
+       "      <td>거치\\n대수</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>301.0</td>\n",
+       "      <td>경복궁역 7번출구 앞</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>서울특별시 종로구 사직로 지하130</td>\n",
+       "      <td>37.575794</td>\n",
+       "      <td>126.971451</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>302.0</td>\n",
+       "      <td>경복궁역 4번출구 뒤</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>서울특별시 종로구 사직로 지하130</td>\n",
+       "      <td>37.575947</td>\n",
+       "      <td>126.974060</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>303.0</td>\n",
+       "      <td>광화문역 1번출구 앞</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>서울특별시 종로구 세종대로 지하189</td>\n",
+       "      <td>37.571770</td>\n",
+       "      <td>126.974663</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>304.0</td>\n",
+       "      <td>광화문역 2번출구 앞</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>서울특별시 종로구 세종대로 지하172</td>\n",
+       "      <td>37.572113</td>\n",
+       "      <td>126.977577</td>\n",
+       "      <td>2021-01-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>QR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>305.0</td>\n",
+       "      <td>종로구청 옆</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>서울특별시 종로구 삼봉로 43</td>\n",
+       "      <td>37.572582</td>\n",
+       "      <td>126.978355</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>306.0</td>\n",
+       "      <td>광화문역 7번출구 앞</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>서울특별시 종로구 세종대로 지하172</td>\n",
+       "      <td>37.570808</td>\n",
+       "      <td>126.976433</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   대여소\\n번호    보관소(대여소)명 소재지(위치)            Unnamed: 3 Unnamed: 4  Unnamed: 5  \\\n",
+       "0      NaN          NaN     NaN                   NaN        NaN         NaN   \n",
+       "1      NaN          NaN     자치구                  상세주소         위도          경도   \n",
+       "2      NaN          NaN     NaN                   NaN        NaN         NaN   \n",
+       "3      NaN          NaN     NaN                   NaN        NaN         NaN   \n",
+       "4    301.0  경복궁역 7번출구 앞     종로구   서울특별시 종로구 사직로 지하130  37.575794  126.971451   \n",
+       "5    302.0  경복궁역 4번출구 뒤     종로구   서울특별시 종로구 사직로 지하130  37.575947  126.974060   \n",
+       "6    303.0  광화문역 1번출구 앞     종로구  서울특별시 종로구 세종대로 지하189  37.571770  126.974663   \n",
+       "7    304.0  광화문역 2번출구 앞     종로구  서울특별시 종로구 세종대로 지하172  37.572113  126.977577   \n",
+       "8    305.0       종로구청 옆     종로구      서울특별시 종로구 삼봉로 43  37.572582  126.978355   \n",
+       "9    306.0  광화문역 7번출구 앞     종로구  서울특별시 종로구 세종대로 지하172  37.570808  126.976433   \n",
+       "\n",
+       "       설치\\n시기    설치형태 Unnamed: 8 운영\\n방식  \n",
+       "0         NaN     LCD         QR    NaN  \n",
+       "1         NaN     NaN        NaN    NaN  \n",
+       "2         NaN  거치\\n대수     거치\\n대수    NaN  \n",
+       "3         NaN     NaN        NaN    NaN  \n",
+       "4  2015-10-07      16        NaN    LCD  \n",
+       "5  2015-10-07      12        NaN    LCD  \n",
+       "6  2015-10-07       8        NaN    LCD  \n",
+       "7  2021-01-26     NaN          7     QR  \n",
+       "8  2015-10-07      16        NaN    LCD  \n",
+       "9  2015-10-07      19        NaN    LCD  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#데이터 확인 -> 컬럼명 수정 및 결측치 확인한다\n",
+    "Data1.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 서울시 구별 설치 거치대의 개수 (2)"
+    "#컬럼 가공\n",
+    "#컬럼명 변경(Unnamed -> 이름 붙여준다)\n",
+    "Data1.columns = ['대여소번호', '대여소명', '자치구', '상세주소', '위도', '경도', '설치시기', '거치대수lcd', '거치대수qr', '운영방식']\n",
+    "\n",
+    "#불필요 칼럼 제거 (상세주소 컬럼은 불필요)\n",
+    "Data1 = Data1.drop(['상세주소'], axis = 1, inplace = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>대여소명</th>\n",
+       "      <th>자치구</th>\n",
+       "      <th>위도</th>\n",
+       "      <th>경도</th>\n",
+       "      <th>설치시기</th>\n",
+       "      <th>거치대수lcd</th>\n",
+       "      <th>거치대수qr</th>\n",
+       "      <th>운영방식</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>301.0</td>\n",
+       "      <td>경복궁역 7번출구 앞</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>37.575794</td>\n",
+       "      <td>126.971451</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>302.0</td>\n",
+       "      <td>경복궁역 4번출구 뒤</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>37.575947</td>\n",
+       "      <td>126.974060</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>303.0</td>\n",
+       "      <td>광화문역 1번출구 앞</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>37.571770</td>\n",
+       "      <td>126.974663</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>304.0</td>\n",
+       "      <td>광화문역 2번출구 앞</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>37.572113</td>\n",
+       "      <td>126.977577</td>\n",
+       "      <td>2021-01-26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>QR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>305.0</td>\n",
+       "      <td>종로구청 옆</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>37.572582</td>\n",
+       "      <td>126.978355</td>\n",
+       "      <td>2015-10-07</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LCD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   대여소번호         대여소명  자치구         위도          경도        설치시기 거치대수lcd 거치대수qr  \\\n",
+       "4  301.0  경복궁역 7번출구 앞  종로구  37.575794  126.971451  2015-10-07      16      0   \n",
+       "5  302.0  경복궁역 4번출구 뒤  종로구  37.575947  126.974060  2015-10-07      12      0   \n",
+       "6  303.0  광화문역 1번출구 앞  종로구  37.571770  126.974663  2015-10-07       8      0   \n",
+       "7  304.0  광화문역 2번출구 앞  종로구  37.572113  126.977577  2021-01-26       0      7   \n",
+       "8  305.0       종로구청 옆  종로구  37.572582  126.978355  2015-10-07      16      0   \n",
+       "\n",
+       "  운영방식  \n",
+       "4  LCD  \n",
+       "5  LCD  \n",
+       "6  LCD  \n",
+       "7   QR  \n",
+       "8  LCD  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#결측치 처리 (qr, lcd 결측치0으로 변경, 대여소번호 ==Nan 삭제)\n",
+    "Data1['거치대수lcd'] = Data1['거치대수lcd'].fillna(0) \n",
+    "Data1['거치대수qr'] = Data1['거치대수qr'].fillna(0)\n",
+    "Data1 = Data1.dropna(subset=['대여소번호'])\n",
+    "Data1 = Data1.dropna(subset=['위도'])\n",
+    "Data1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2042 entries, 4 to 2157\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   대여소번호    2042 non-null   float64\n",
+      " 1   대여소명     2042 non-null   object \n",
+      " 2   자치구      2042 non-null   object \n",
+      " 3   위도       2042 non-null   object \n",
+      " 4   경도       2042 non-null   object \n",
+      " 5   설치시기     2040 non-null   object \n",
+      " 6   거치대수lcd  2042 non-null   object \n",
+      " 7   거치대수qr   2042 non-null   object \n",
+      " 8   운영방식     2042 non-null   object \n",
+      "dtypes: float64(1), object(8)\n",
+      "memory usage: 159.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#결측치 제거 확인\n",
+    "Data1.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 서울시 구별로 거치대 개수와 대여건수"
+    "* 자치구별 대여소 개수 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "자치구\n",
+       "송파구     129\n",
+       "강서구     120\n",
+       "강남구     118\n",
+       "서초구     118\n",
+       "영등포구    106\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#자치구별 대여소 개수 데이터 그룹핑\n",
+    "Location = Data1.groupby(by = ['자치구']).size()\n",
+    "Location.sort_values(ascending = False, inplace = True)\n",
+    "Location.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 지역별 거치대 개수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 연도별 설치 개수 변화"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 대여소 분포"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#위도 경도 이용해서 대여소간 분포 파악\n",
+    "#평균거리 산출하여 지역별 대여소 거리 막대그래프 시각화\n",
+    "#분포 지도로 표현예정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 서울시 구별로 이용량"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 시간에 따른 구별 이용량 변화"
    ]
   },
   {
@@ -1192,7 +1678,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 서울시 구별로 거치대 개수와 대여건수 (1)"
+    "# 대여소별 이용정보 추후에 18~21년까지 이용정보 데이터 셋 병합 후 업로드 예정  \n",
+    "Data2 = pd.read_csv('data-set/대여소별 이용정보(21.7-21.12).csv', encoding = 'cp949')"
    ]
   },
   {
@@ -1235,7 +1722,7 @@
    "hash": "6ffd0a48abc7c5a81268003801b748c9b72ba19e118165c22eb0f9c1b1dd10c9"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1249,9 +1736,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
